# cmd/api/runner.go
@@ -3,6 +3,7 @@ package main
 import (
 	"go-hexagonal-fullstack-monorepo/cmd/api/router"
 	"go-hexagonal-fullstack-monorepo/internal/core/user"
+	"go-hexagonal-fullstack-monorepo/internal/core/users_origin_enum"
 	"go-hexagonal-fullstack-monorepo/internal/shared/http/server"
 	"go-hexagonal-fullstack-monorepo/internal/shared/localconfig"
 	"go-hexagonal-fullstack-monorepo/internal/shared/logger"
@@ -21,6 +22,7 @@ func Run() {
 		postgres.Module,
 		server.Module,
 		user.Module,
+		users_origin_enum.Module,
 		fx.Invoke(router.SetAPIRoutes),
 		// fx.NopLogger, // Disable fx's own logging to use our custom logger
 	)
