# internal/core/users_origin_enum/domain/entity/query.go
@@ -1,0 +1,6 @@
+package entity
+
+type UsersOriginEnum struct {
+	Code string `json:"code,omitzero"`
+	Name string `json:"name,omitzero"`
+}
